2022-02-01 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/Makefile.in:
	  Do not run mos6502 and mcs51-xstack-auto tests for all target, since they have extra dependencies.

2022-01-31 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/device/lib/mos6502/_mulint.c,
      sdcc/device/lib/mos6502/_mulint.s,
      sdcc/device/lib/mos6502/_mullong.s,
      sdcc/device/lib/mos6502/_ret.c:
      Implement mulint and mullong in assembly.

2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve memory shift operations.
      
2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve register shift operations.

2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Expand use of inc/dec for literal add/sub operations.

2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Enable inc/dec on register targets.

2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      storeRegIndexed improvements.

2022-01-30 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Special case X->Y and Y->X whith literal values.

2022-01-29 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/src/mos6502/ralloc2.cc:
      General code cleanup.

2022-01-29 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/hc08/gen.c,
      sdcc/src/hc08/ralloc2.cc:
      Fix a overflow bug in dry run cost calculation.
    
2022-01-29 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/src/mos6502/ralloc.c,
      sdcc/src/mos6502/ralloc2.cc:
      Fix a overflow bug in dry run cost calculation.

2022-01-28 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Add new peephole rules.

2022-01-28 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve register transfer operations.

2022-01-26 Gabriele Gorla <gorlik@yahoo.com>
